# stegano-mafia-gentils

./: .gitignore  Cargo.toml  README.md  commands.sh  package-lock.json  package.json  room.js  server.js  server.mjs  stegano_project.js  stegano_project_bg.wasm  user.js
.VSCodeCounter/2024-03-11_16-32-10/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
images/steganographie/: README.md  aes_key  message.txt
passphrases/: passphraseGenerator.js  serverPassphrase.txt
persist/: images-data.json  private-direct-messages.json  public-messages.json  rooms.json  users.json
public/clients/: chat.js  client.js  common.js  login.js  main.js  register.js
public/pages/: already_in_use.html  chat.html  connection.html  index.html  register.html  unauthorized.html  unknown.html
public/styles/: style.css
scripts/: credentials.json  download-drive.py  encode_img_prod.sh  lauch_analysis  results_to_graph.py
src/: algo_modifiers.rs  annalyser.rs  lib.rs  lsb.rs  main.rs  main_annalyser.rs  mass_test.rs  pvd.rs  rs.rs  shannon_entropy.rs  sigma_lsb.rs  stega_key_static.rs  test_procedure.rs  utilities.rs  viterbi.rs
src/algo_modifiers/: edges_iterator.rs  histo_transformation.rs  position_by_hash.rs
src/hugo/: image_dist.rs  mod.rs
src/utilities/: encryption.rs  hash_rng.rs
