[package]
name = "steganomafia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
image = "0.24.7"
imageproc = "0.23.0"
num = "0.4.1"
rand = "0.8.5"
sha2 = "0.10.8"
clap = "3"
sha3 = "0.10.8"
md-5 = "0.10.6"

openssl = { version = "0.10.62", features = ["vendored"] }
anstyle = "1.0.7"

[dependencies.show-image]
version= "0.13.1"
features = ["image"]