[package]
name = "steganomafia"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.13"
hex-literal = "0.4.1"
image = "0.24.7"
imageproc = "0.23.0"
num = "0.4.1"
rand = "0.8.5"
sha2 = "0.10.8"
clap = "3"
sha3 = "0.10.8"
md-5 = "0.10.6"
getrandom = { version = "0.2", features = ["js"] }
openssl = { version = "0.10.62", features = ["vendored"] }
anstyle = "1.0.7"
statrs = "0.15.0"
web-sys = { version = "0.3.69" }
polynomen = "1.1.0"

[dependencies.show-image]
version = "0.13.1"
features = ["image"]
